// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen gvpCustomers config import-export] should create the gvpCustomers: the gvpCustomers have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ gvpcustomer => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen gvpCustomers config import-export] should throw exception when new gvpCustomers to import miss mandatory properties gvpCustomers: exception has been thrown 1`] = `
Object {
  "stderr": "Cannot import configuration: some configuration objects' mandatory properties for creation are not set.
	Mandatory properties [channel, reseller, tenant] not set in gvpcustomer 'emptyCfgObjectTest'
",
  "stdout": "",
}
`;

exports[`[mutagen gvpCustomers config import-export] should update the gvpCustomers: the gvpCustomers have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ gvpcustomer => cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
